--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -30,11 +30,13 @@
                             <option th:each="portaria : ${portarias}" th:value="${portaria}" th:text="${portaria}"></option>
                         </select>
                     </div>
-                     <div class="form-group"  style="margin-top: 20px;">
-                        <label for="data"></label>
-                        <span> Data da Digitação</span>
-                       <span th:text="${#temporals.format(datadigitacao, 'dd-MM-yyyy')}" th:field=*{data}></span>
-                    </div>
+                     <div class="form-group" style="margin-top: 20px;">
+   						 <label for="data">Data da Digitação</label>
+   						 <input type="date" id="data" name="data" class="form-control" 
+           						th:value="${#temporals.format(datadigitacao, 'yyyy-MM-dd')}" 
+           						th:field="*{data}" 
+           						style="width: 200px;" />
+					</div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -118,6 +120,10 @@
     <!-- Inclusão dos modais -->
     <div th:replace="~{municipioSearchModal :: municipioSearchModal}"></div>
     <div th:replace="~{productSearchModal :: productSearchModal}"></div>
+
+
+
+
 
     <script>
         function openMunicipioModal() {
@@ -320,6 +326,7 @@ function selectProduct(codigo, id, variedade, subvariedade) {
         }
     };
 </script>
+
 
   <script src="/script/nota/clearForm.js"></script>
    <script src="/script/nota/searchMunicipioByCodigo.js"></script>
